 * XHTML is no longer tidied before output.
 * Local Repository Plugin code removed entirely.
 * Added a new field render function which just puts a css highlighted
    div around an item.
 * Made "suggestions" render with a highlight.
 * Saved Search option disabled for beta release.
 * Split render_field into also having render_field_actual which is not
    subject to the render_value config option.
 * Fixed bug in function pointer names containing :: in fields.
 * Made simple search simple
 * Removed some cruft from index.xpage
 * Removed /help/ from the template
 * Fixed bug in information.xpage

2006-10-26 moj
 * Tweaked Subject to avoid deprecation warning
 * Moved db ok/down to phrase file
 * Tweaked Staff/Edit:Description to be less 'tech'
 * Moved phrases_map out of the way
 * Added phrases for missing fields
 * Rearranged user workflow slightly to have Account/Personal sections 

2006-10-26 cjg
 * related_url field no longer has up and down arrows in input
 * Moved a bunch of bin scripts away until they get combined into epadmin
    later. (recommit_dataset, rehash_documents, erase_eprints, 
    reindex_dataset, erase_fulltext_cache)
 * create_tables is now part of epadmin
 * erase_archive is now part of epadmin
 * test_config is now part of epadmin

2006-10-26 moj
 * s/children/get_children/ in Subject (and Extras/Session)
 * Added has_help to Component, made has_help in Field check the content
    of the help DOM, made Surround only show help on the field if there's 
    help content. Note that this should be refined to use colspan if there
    is a mixture of fields with help/no help.
 * s/auth/author/ for the url types.
 * Added help for the Personal Details fields. 

2006-10-26 cjg
 * Reworked template and default homepage for beta release

2006-10-26 cjg
 * Fixed bug introduced in s/children/get_children/ 

2006-10-27 tmb
 * Added hook for overriding default username/password check (e.g. for handing off to LDAP server)