@@ -3,6 +3,9 @@
 use strict;
 use warnings;
 
+use lib "../perl_lib";
+use lib "perl_lib";
+
 use XML::DOM;
 use XML::LibXML;
 use XML::GDOME;
@@ -21,34 +24,78 @@ sub appendChild
 1;
 }
 
-my( $doc );
+my( $doc, $root, $attrs );
+
+our $TI = 1;
 
 # DOM
 print "\n--XML::DOM--\n\n";
 
 $doc = XML::DOM::Document->new;
-$doc->appendChild($doc->createElement('foo'));
+$doc->appendChild($root = $doc->createElement('foo'));
 print $doc->toString;
 print $doc->getDocumentElement->toString, "\n";
-print $doc->cloneNode(1)->toString;
+print $doc->cloneNode(1)->toString, "\n";
+print(($doc->getElementsByTagName( "foo" ))[0]->toString, "\n");
+$root->appendChild( $doc->createTextNode( "bar" ));
+test(sub {$root->nodeName . "/" . $root->tagName . "\n"});
+test(sub {$root->getFirstChild->nodeName . "\n"});
+$root->setAttribute( 'foo', 'bar' );
+$attrs = $root->attributes;
+for(my $i = 0; $i < $attrs->length; $i++)
+{
+	my $attr = $attrs->item($i);
+	$attr->setValue( 'barbar' );
+	test(sub {$attr->name . "=" . $attr->value . "\n"});
+}
 
 # LibXML
 print "\n--XML::LibXML--\n\n";
 
 $doc = XML::LibXML::Document->new;
 $doc = bless $doc, 'LibXMLDoc';
-$doc->appendChild($doc->createElement('foo'));
-print $doc->toString;
-print $doc->getDocumentElement->toString, "\n";
-print $doc->cloneNode(1)->toString;
+$doc->appendChild($root = $doc->createElement('foo'));
+test(sub {$doc->toString});
+test(sub {$doc->getDocumentElement->toString, "\n"});
+test(sub {$doc->cloneNode(1)->toString, "\n"});
+test(sub {($doc->getElementsByTagName( "foo" ))[0]->toString . "\n"});
+$root->appendText( "bar" );
+test(sub {$root->nodeName . "/" . $root->tagName . "\n"});
+test(sub {$root->getFirstChild->nodeName . "\n"});
+$root->setAttribute( 'foo', 'bar' );
+$attrs = $root->attributes;
+for(my $i = 0; $i < $attrs->length; $i++)
+{
+	my $attr = $attrs->item($i);
+	$attr->setValue( 'barbar' );
+	test(sub {$attr->name . "=" . $attr->value . "\n"});
+}
 
 # GDOME
 print "\n--XML::GDOME--\n\n";
 
 $doc = XML::GDOME->createDocument( undef, "namespace", undef );
 $doc->removeChild( $doc->getFirstChild );
-$doc->appendChild($doc->createElement('foo'));
-print $doc->toString;
-print $doc->getDocumentElement->toString, "\n";
-print $doc->cloneNode(1)->toString;
+$doc->appendChild($root = $doc->createElement('foo'));
+test(sub {$doc->toString});
+test(sub {$doc->getDocumentElement->toString, "\n"});
+test(sub {$doc->cloneNode(1)->toString});
+test(sub {($doc->getElementsByTagName( "foo" ))[0]->toString . "\n"});
+$root->appendChild( $doc->createTextNode( "bar" ));
+test(sub {$root->nodeName . "/" . $root->tagName . "\n"});
+test(sub {$root->getFirstChild->nodeName . "\n"});
+$root->setAttribute( 'foo', 'bar' );
+$attrs = $root->attributes;
+for(my $i = 0; $i < $attrs->length; $i++)
+{
+	my $attr = $attrs->item($i);
+	$attr->setValue( 'barbar' );
+	test(sub {$attr->name . "=" . $attr->value . "\n"});
+}
 
+sub test
+{
+	print $TI++ . ":\n";
+	my $f = shift;
+	print &$f;
+}
